Fix uikit buttons overflowing

--- a/src/components/uiKit/message/PlainText/styles.scss
+++ b/src/components/uiKit/message/PlainText/styles.scss
@@ -1,4 +1,6 @@
 .uikit-plain-text {
 	word-wrap: break-word;
 	word-break: break-word;
+	white-space: normal;
+	text-align: left;
 }
